# rkvm2

./: .gitignore  Cargo.toml  README.md
config/: Cargo.toml  build.rs
config/src/: lib.rs
input/: Cargo.toml
input/src/: lib.rs
input/src/linux/: event.rs  event_manager.rs  event_reader.rs  event_writer.rs
inputd/: Cargo.toml
inputd/src/: main.rs
pipe/: Cargo.toml
pipe/src/: lib.rs
pipe/src/linux/: pipe.rs
pipe/src/windows/: pipe.rs
proto/: Cargo.toml  build.rs
proto/src/: lib.rs  messages.proto  rkvm2.proto
rkvm2/: Cargo.toml
rkvm2/src/: conn.rs  input.rs  main.rs  net.rs
