[package]
name = "rkvm2-inputd"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
futures = "0.3.26"
log = "0.4.11"
tokio-util = { version="0.7.7", features=["codec"] }
rkvm2-input = { path = "../input" }
rkvm2-proto = { path = "../proto" }
rkvm2-pipe = { path = "../pipe" }
rkvm2-config = { path = "../config" }
env_logger = "0.10.0"
nix = { version = "0.26.2", features = ["fs"]}
tokio = { version = "1.26.0", features = ["fs", "io-util", "net", "sync", "rt-multi-thread", "time", "macros"] }

