[package]
name = "rkvm2-pipe"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.26"
log = "0.4.11"
rkvm2-proto = { path = "../proto" }
nix = { version = "0.26.2", features = ["fs"]}
tokio = { version = "1.26.0", features = ["fs", "io-util", "net", "sync", "rt-multi-thread", "time", "macros"] }