[package]
name = "rkvm2-proto"
version = "0.1.0"

[lib]
name = "rkvm_proto"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { version="0.11.8" }
prost-wkt = "0.4.1"
prost-wkt-types = "0.4.1"
serde = { version="1", features=["derive"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
num-traits = "0.2.14"
num-derive = "0.3.3"

[dev-dependencies]
serde_json = "1"

[build-dependencies]
prost-wkt-build = { version = "0.4.1" }
prost-build = { git = "https://github.com/bislydev/prost.git", rev = "8d7569ea945719a015b93671c29b9b1b31b9b35e" }
version-rs = { git = "https://github.com/eucleo/version-rs.git" }
